# bzlmod-version

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: test.yml
src/: bzlmod-version.spec.ts  index.spec.ts  index.ts
