load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

ts_project(
    name = "lib",
    srcs = [
        "src/bzlmod-version.ts",
        "src/index.ts",
    ],
    declaration = True,
)

npm_package(
    name = "package",
    srcs = [
        "package.json",
        ":lib",
    ],
    package = "@bazel/bzlmod-version",
)

build_test(
    name = "build_package",
    targets = [
        ":package",
    ],
)
